--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /client/node_modules
 /server/node_modules
 /server/.env
+/server/public/groupPictures/*
+/server/public/profilePictures/*
+/server/public/chatPictures/*
+/server/public
